--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   	</dependency>
   </dependencies>
    <build>
+    <defaultGoal>package</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
